# example-mod

./: CMakeLists.txt  mod.json
.github/: workflows
.github/workflows/: build.yml
src/: main.cpp
